--- a/modules/ROOT/pages/full-featured-premium-demo.adoc
+++ b/modules/ROOT/pages/full-featured-premium-demo.adoc
@@ -25,7 +25,7 @@ The following plugins are excluded from this example:
 |Resizes the editor to fit the content.
 
 |xref:code.adoc[Code]
-|xref:advcode.adoc[*Advanced Code Editor*] included instead.
+|xref:advcode.adoc[*Enhanced Code Editor*] included instead.
 
 |xref:moxiemanager.adoc[MoxieManager]
 |xref:tinydrive-introduction.adoc[*{cloudfilemanager}*] included instead.
