--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -1,10 +1,10 @@
 * xref:a11ychecker.adoc[Accessibility Checker]
-* xref:advcode.adoc[Advanced Code Editor]
 * xref:advtable.adoc[Advanced Tables]
 * xref:advanced-typography.adoc[Advanced Typography]
 * xref:casechange.adoc[Case Change]
 * xref:checklist.adoc[Checklist]
 * xref:introduction-to-tiny-comments.adoc[Comments]
+* xref:advcode.adoc[Enhanced Code Editor]
 * xref:editimage.adoc[Enhanced Image Editing]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 * xref:export.adoc[Export]
