--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -31,7 +31,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Advanced Code Editor
+:pluginname: Enhanced Code Editor
 :plugincode: advcode
 :altplugincode: code
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
