--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -36,7 +36,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Advanced Code Editor
+:pluginname: Enhanced Code Editor
 :plugincode: advcode
 :altplugincode: code
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
