--- a/modules/ROOT/partials/module-loading/bundling-plugins-that-cant-bundle.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugins-that-cant-bundle.adoc
@@ -3,8 +3,8 @@
 The following premium plugins *can not* be bundled if the {productname} version is earlier than **6.8.0**. However, if the {productname} version is equivalent to **v6.8.0** or **later**, the following premium plugins can be bundled:
 
 * Accessibility Checker (`+a11ychecker+`)
-* Advanced Code (`+advcode+`)
 * Comments (`+tinycomments+`)
+* Enhanced Code Editor (`+advcode+`)
 * Enhanced Media Embed (`+mediaembed+`)
 * Link Checker (`+linkchecker+`)
 * Mentions (`+mentions+`)
