--- a/modules/ROOT/pages/advlist.adoc
+++ b/modules/ROOT/pages/advlist.adoc
@@ -1,7 +1,7 @@
 = List Styles plugin
 :navtitle: List Styles
 :description: Create styled number and bulleted lists.
-:keywords: advlist, advlist_bullet_styles, advlist_number_styles
+:keywords: advlist, advlist_bullet_styles, advlist_number_styles, list_style
 :pluginname: List Styles
 :plugincode: advlist
 
