--- a/modules/ROOT/partials/configuration/markdown.adoc
+++ b/modules/ROOT/partials/configuration/markdown.adoc
@@ -5,7 +5,7 @@ The `markdown_symbols` option allows you to define `key/value` pairs where the `
 
 *Type:* `+Object+`
 
-*Default value:* The `+markdown_symbols+` object excepts the following key-value pairs by default currently:
+*Default value:* The `+markdown_symbols+` object accepts the following key-value pairs by default currently:
 
 [source, js]
 ----
