--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -12,7 +12,7 @@ include::partial$misc/admon-premium-plugin.adoc[]
 [TIP]
 As of {productname} 7.0, the Advanced Code Editor plugin has been renamed to {pluginname}. When adding {pluginname} in your editor, continue to use {plugincode}.
 
-The xref:advcode.adoc[Enhanced Code Editor] plugin (`+advcode+`) brings a more Enhanced Code Editor to {productname}. This code editor makes it easier to modify the HTML, and is a useful add-on for power users. It comes with features often found in IDEs, all enabled by default:
+The xref:advcode.adoc[Enhanced Code Editor] plugin (`+advcode+`) brings a more advanced code editor to {productname}. This code editor makes it easier to modify the HTML, and is a useful add-on for power users. It comes with features often found in IDEs, all enabled by default:
 
 * Syntax color highlighting.
 * Bracket matching.
