--- a/modules/ROOT/pages/advlist.adoc
+++ b/modules/ROOT/pages/advlist.adoc
@@ -32,7 +32,7 @@ include::partial$configuration/advlist_number_styles.adoc[leveloffset=+1]
 
 == Commands
 
-The List Styles plugin provides the following {productname} commands.
+The {pluginname} plugin provides the following {productname} commands.
 
 include::partial$commands/advlist-cmds.adoc[]
 
