--- a/modules/ROOT/pages/custom-dictionaries-for-tiny-spellchecker.adoc
+++ b/modules/ROOT/pages/custom-dictionaries-for-tiny-spellchecker.adoc
@@ -1,6 +1,6 @@
 = Adding custom dictionaries
 :description: Custom dictionaries can be added to Spell Checker
-:keywords: enterprise, tinymcespellchecker, spell check, Spell Checker
+:keywords: enterprise, tinymcespellchecker, spell check, spell checker
 
 [[creating-custom-dictionary-files]]
 == Creating custom dictionary files
