--- a/modules/ROOT/pages/advtable.adoc
+++ b/modules/ROOT/pages/advtable.adoc
@@ -1,6 +1,6 @@
 = Enhanced Tables plugin
 :navtitle: Enhanced Tables
-:description: Add advanced functionality to tables.
+:description: Add enhanced functionality to tables.
 :keywords: sort, rownumbering, series, tables, advanced, advtable, premium
 :pluginname: Enhanced Tables
 :plugincode: advtable
