DOC-2300: Replace Spell Checker Pro to Spell Checker in 7x docs project. (#3114)
* DOC-2300: Replace Spell Checker Pro to Spell Checker in 7x docs project.

* Update modules/ROOT/pages/custom-dictionaries-for-tiny-spellchecker.adoc

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -320,8 +320,8 @@
 **** xref:powerpaste-commands-events-apis.adoc[Commands and Events]
 **** xref:powerpaste-support.adoc[Supported functionality]
 **** xref:powerpaste-troubleshooting.adoc[Troubleshooting]
-*** Spell Checker Pro
-**** xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
+*** Spell Checker
+**** xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 **** xref:custom-dictionaries-for-tiny-spellchecker.adoc[Adding custom dictionaries]
 *** xref:autocorrect.adoc[Spelling Autocorrect]
 *** xref:tableofcontents.adoc[Table of Contents]
