--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -214,7 +214,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: Spell Checker Pro
+:pluginname: Spell Checker
 :plugincode: tinymcespellchecker
 :pluginpage: introduction-to-tiny-spellchecker.adoc
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
