--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -131,7 +131,7 @@ Copy and paste content from Microsoft Word, Microsoft Excel, Google Docs, and HT
 
 a|
 [.lead]
-xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
+xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 
 Check spelling as-you-type in {productname}.
 
