--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -20,7 +20,7 @@ endif::[]
 * xref:pageembed.adoc[Page Embed]
 * xref:permanentpen.adoc[Permanent Pen]
 * xref:introduction-to-powerpaste.adoc[PowerPaste]
-* xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
+* xref:introduction-to-tiny-spellchecker.adoc[Spell Checker]
 * xref:autocorrect.adoc[Spelling Autocorrect]
 * xref:tableofcontents.adoc[Table of Contents]
 * xref:tinydrive-introduction.adoc[{cloudfilemanager}]
