--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -19,7 +19,7 @@ include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
 ** xref:page-embed[Page Embed (pageembed)]
 ** xref:permanent-pen[Permanent Pen (permanentpen)]
 ** xref:powerpaste[PowerPaste (powerpaste)]
-** xref:spell-checker-pro[Spell Checker Pro (tinymcespellchecker)]
+** xref:spell-checker[Spell Checker (tinymcespellchecker)]
 ** xref:autocorrect[Spelling Autocorrect]
 ** xref:table-of-contents[Table of Contents (tableofcontents)]
 * xref:community-plugins[Community plugins]
@@ -149,8 +149,8 @@ include::partial$module-loading/admon-bundling-plugin-langs.adoc[]
 
 include::partial$plugin-files/plugin-file-list-powerpaste.adoc[]
 
-[[spell-checker-pro]]
-=== Spell Checker Pro (`+tinymcespellchecker+`)
+[[spell-checker]]
+=== Spell Checker (`+tinymcespellchecker+`)
 
 include::partial$module-loading/admon-bundling-plugin-langs.adoc[]
 
