--- a/modules/ROOT/pages/advtable.adoc
+++ b/modules/ROOT/pages/advtable.adoc
@@ -10,7 +10,7 @@
 include::partial$misc/admon-premium-plugin.adoc[]
 
 [TIP]
-As of {productname} 7.0, the Advanced tables plugin has been renamed to {pluginname}. When adding {pluginname} in your editor, continue to use {plugincode}.
+As of {productname} 7.0, the Advanced Tables plugin is now named {pluginname}. When using the {pluginname} plugin in your editor, continue to use {plugincode} in the `+plugins+` list.
 
 The `+advtable+` plugin is a premium plugin that extends the core xref:table.adoc[`+table+` plugin] by adding the following advanced functionality:
 
