DOC-2300: Replace `Advanced Tables` mentions with `Enhanced Tables` in 7x docs project. (#3116)
* DOC-2300: Replace Advanced Tables mentions with Enhanced Tables in 7x docs project.

* Update modules/ROOT/partials/index-pages/premium-plugins.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advtable.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/advtable.adoc

Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

---------

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>
Co-authored-by: Mitchell Crompton <mitchell.crompton@tiny.cloud>

--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -5,7 +5,7 @@ include::partial$module-loading/bundling-plugins-that-cant-bundle.adoc[]
 * xref:premium-plugins[Premium plugins]
 ** xref:accessibility-checker[Accessibility Checker (a11ychecker)]
 ** xref:advanced-code[Advanced Code (advcode)]
-** xref:advanced-tables[Advanced Tables (advtable)]
+** xref:advanced-tables[Enhanced Tables (advtable)]
 ** xref:case-change[Case Change (casechange)]
 ** xref:checklist[Checklist (checklist)]
 ** xref:comments[Comments (tinycomments)]
@@ -68,7 +68,7 @@ include::partial$plugin-files/plugin-file-list-a11ychecker.adoc[]
 include::partial$plugin-files/plugin-file-list-advcode.adoc[]
 
 [[advanced-tables]]
-=== Advanced Tables (`+advtable+`)
+=== Enhanced Tables (`+advtable+`)
 
 include::partial$module-loading/admon-bundling-plugin-langs.adoc[]
 
