--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -213,6 +213,8 @@ include::partial$commands/core-table-cmds.adoc[]
 Commands are available for the following plugins:
 
 * xref:advancedcode[Advanced Code]
+* xref:advancedlists[Advanced Lists]
+* xref:Enhanced Tables[Enhanced Tables]
 * xref:advancedtables[Advanced Tables]
 * xref:anchor[Anchor]
 * xref:autoresize[Autoresize]
@@ -255,10 +257,18 @@ The following command requires the xref:advcode.adoc[Advanced Code (`+advcode+`)
 
 include::partial$commands/code-cmds.adoc[leveloffset=+3]
 
-[[advancedtables]]
-==== Advanced Tables
 
-The following commands require the xref:advtable.adoc[Advanced Tables (`+advtable+`)] plugin.
+[[advancedlists]]
+==== Advanced Lists
+
+The following commands require the xref:advlist.adoc[Advanced Lists (`+advlist+`)] plugin.
+
+include::partial$commands/advlist-cmds.adoc[leveloffset=+3]
+
+[[Enhanced Tables]]
+==== Enhanced Tables
+
+The following commands require the xref:advtable.adoc[Enhanced Tables (`+advtable+`)] plugin.
 
 include::partial$commands/advtable-cmds.adoc[leveloffset=+3]
 
