--- a/modules/ROOT/pages/editor-and-features.adoc
+++ b/modules/ROOT/pages/editor-and-features.adoc
@@ -8,7 +8,7 @@
 
 {cloudname} can be used without an API key. Sign up for an API key and update the script tag to use premium plugins or avoid the in-editor developer warning.
 
-All {cloudname} accounts include a free, pre-configured {cloudname} image proxy service. This setup uses the xref:editimage.adoc[Enhanced Image Editing] plugin.
+All {cloudname} accounts include a free, pre-configured {cloudname} image proxy service. This setup uses the xref:editimage.adoc[Image Editing] plugin.
 
 == Integrating {productname} for the first time
 
