--- a/modules/ROOT/pages/features-only.adoc
+++ b/modules/ROOT/pages/features-only.adoc
@@ -6,7 +6,7 @@
 
 A hybrid deployment of {cloudname} allows the loading of premium plugins in a self-hosted environment. Download and install the link:{gettiny}/[{productname} Community edition] to get started.
 
-Signing up for a free API key provides entitlements to the premium xref:editimage.adoc[Enhanced Image Editing] plugin. A {cloudname} image proxy server must already be configured. Premium plugins can be purchased at any time once the API key has been set up.
+Signing up for a free API key provides entitlements to the premium xref:editimage.adoc[Image Editing] plugin. A {cloudname} image proxy server must already be configured. Premium plugins can be purchased at any time once the API key has been set up.
 
 == Step 1: Insert the custom script tag into the webpage
 
