--- a/modules/ROOT/pages/introduction-to-premium-selfhosted-services.adoc
+++ b/modules/ROOT/pages/introduction-to-premium-selfhosted-services.adoc
@@ -12,7 +12,7 @@ The following server-side components are included in the {productname} Self-host
 |===
 |Component |File |Description
 |xref:introduction-to-tiny-spellchecker.adoc[Spellchecking], xref:autocorrect.adoc[Spelling Autocorrect] |ephox-spelling.war |Spell checking and Autocorrect service for {productname} Enterprise.
-|xref:editimage.adoc[Enhanced Image Editing] |ephox-image-proxy.war |Image proxy service for the Export and Enhanced Image Editing plugins.
+|xref:editimage.adoc[Image Editing] |ephox-image-proxy.war |Image proxy service for the Export and Image Editing plugins.
 |xref:introduction-to-mediaembed.adoc[Enhanced Media Embed], xref:linkchecker.adoc[Link Checker] |ephox-hyperlinking.war |Link Checker and Enhanced Media Embed service for {productname} Enterprise.
 |===
 
