--- a/modules/ROOT/pages/tinymce-and-cors.adoc
+++ b/modules/ROOT/pages/tinymce-and-cors.adoc
@@ -8,7 +8,7 @@
 include::partial$configuration/referrer_policy.adoc[leveloffset=+1]
 
 include::partial$configuration/content_css_cors.adoc[leveloffset=+1]
-:pluginname: Enhanced Image Editing
+:pluginname: Image Editing
 :plugincode: editimage
 include::partial$configuration/image_cors_hosts.adoc[leveloffset=+1]
 :pluginname: Export
