--- a/modules/ROOT/pages/tinymce-for-mobile.adoc
+++ b/modules/ROOT/pages/tinymce-for-mobile.adoc
@@ -13,7 +13,7 @@ The mobile experience for {productname} is enabled by default and has the follow
 The mobile experience allows most of the {productname} plugins to work on mobile devices, except for:
 
 * xref:introduction-to-tiny-comments.adoc[Comments].
-* xref:editimage.adoc[Enhanced Image Editing].
+* xref:editimage.adoc[Image Editing].
 * xref:moxiemanager.adoc[MoxieManager].
 * xref:permanentpen.adoc[Permanent Pen].
 
