--- a/modules/ROOT/partials/misc/available-context-menu-sections.adoc
+++ b/modules/ROOT/partials/misc/available-context-menu-sections.adoc
@@ -14,7 +14,7 @@ The identifier below will add a context menu _section_ containing one or more it
 |===
 |identifier |Core/Plugin |Description
 |image |xref:image.adoc[Image] |Adds the _Image..._ item for opening the *Insert/Edit Image* dialog.
-|editimage |xref:editimage.adoc[Enhanced Image Editing] |Adds the _Edit image_ item for opening the *Edit Image* dialog.
+|editimage |xref:editimage.adoc[Image Editing] |Adds the _Edit image_ item for opening the *Edit Image* dialog.
 |link |xref:link.adoc[Link] |Adds the _Link..._ item for opening the *Insert/Edit Link* dialog.
 |linkchecker |xref:linkchecker.adoc[Link Checker] |Adds the _Ignore_ item on links marked as broken, allowing the user to instruct linkchecker to ignore the link.
 |lists |xref:lists.adoc[Lists] |Adds the _List properties..._ item for opening the *List Properties* dialog.
