--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -5,11 +5,11 @@
 * xref:casechange.adoc[Case Change]
 * xref:checklist.adoc[Checklist]
 * xref:introduction-to-tiny-comments.adoc[Comments]
-* xref:editimage.adoc[Enhanced Image Editing]
 * xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 * xref:footnotes.adoc[Footnotes]
 * xref:formatpainter.adoc[Format Painter]
 * xref:inline-css.adoc[Inline CSS]
+* xref:editimage.adoc[Image Editing]
 * xref:linkchecker.adoc[Link Checker]
 * xref:mentions.adoc[Mentions]
 * xref:mergetags.adoc[Merge Tags]
