--- a/modules/ROOT/pages/editor-command-identifiers.adoc
+++ b/modules/ROOT/pages/editor-command-identifiers.adoc
@@ -222,13 +222,13 @@ Commands are available for the following plugins:
 * xref:codesample[Code Sample]
 * xref:comments[Comments]
 * xref:directionality[Directionality]
-* xref:editimage[Enhanced Image Editing]
 * xref:emoticons[Emoticons]
 * xref:footnotes[Footnotes]
 * xref:formatpainter[Format Painter]
 * xref:fullscreen[Full Screen]
 * xref:help[Help]
 * xref:image[Image]
+* xref:editimage[Image Editing]
 * xref:insertdatetime[Insert Date/Time]
 * xref:link[Link]
 * xref:lists[Lists]
@@ -319,10 +319,10 @@ The following commands require the xref:directionality.adoc[Directionality (`+di
 include::partial$commands/directionality-cmds.adoc[leveloffset=+3]
 
 
-[[editimage]]
-==== Enhanced Image Editing
+[[imageediting]]
+==== Image Editing
 
-The following commands require the xref:editimage.adoc[Enhanced Image Editing (`+editimage+`)] plugin.
+The following commands require the xref:editimage.adoc[Image Editing (`+editimage+`)] plugin.
 
 include::partial$commands/editimage-cmds.adoc[leveloffset=+3]
 
