--- a/modules/ROOT/partials/commands/editimage-cmds.adoc
+++ b/modules/ROOT/partials/commands/editimage-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|mceEditImage |Opens the Edit Image editing dialog.
+|mceEditImage |Opens the Image editing dialog.
 |mceImageRotateRight |Rotates the selected image 90 degrees clockwise.
 |mceImageRotateLeft |Rotates the selected image 90 degrees counterclockwise.
 |mceImageFlipVertical |Flips the selected image vertically.
