--- a/modules/ROOT/partials/configuration/automatic_uploads.adoc
+++ b/modules/ROOT/partials/configuration/automatic_uploads.adoc
@@ -1,7 +1,7 @@
 [[automatic_uploads]]
 == `+automatic_uploads+`
 
-Enable or disable automatic upload of images represented by data URLs or blob URIs. Such images get generated, for example, as a result of image manipulation through the xref:editimage.adoc[Enhanced Image Editing] plugin, or after image is drag-n-dropped onto the editor from the desktop.
+Enable or disable automatic upload of images represented by data URLs or blob URIs. Such images get generated, for example, as a result of image manipulation through the xref:editimage.adoc[Image Editing] plugin, or after image is drag-n-dropped onto the editor from the desktop.
 
 NOTE: This option will do nothing if `+images_upload_url+` or `+images_upload_handler+` is not specified.
 
