--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -59,12 +59,6 @@ The {productname} Comments plugin.
 
 a|
 [.lead]
-xref:editimage.adoc[Enhanced Image Editing]
-
-Enhanced image editing features for {productname}.
-
-a|
-[.lead]
 xref:introduction-to-mediaembed.adoc[Enhanced Media Embed]
 
 Add rich media previews inside {productname}.
@@ -86,6 +80,12 @@ a|
 xref:inline-css.adoc[Inline CSS]
 
 Turn {productname} documents into single files with inline CSS, ready, in particular, for sending as HTML-formatted emails.
+
+a|
+[.lead]
+xref:editimage.adoc[Image Editing]
+
+Image Editing features for {productname}.
 
 a|
 [.lead]
